--- a/src/styles/elements/_tabs.scss
+++ b/src/styles/elements/_tabs.scss
@@ -1,5 +1,5 @@
 $tab-background-color: #fffffff6;
-$tab-inactive-background-color: #d7dbe0;
+$tab-inactive-background-color: #d9dcdd;
 $tab-inactive-color: #717376;
 $tab-height: 48px;
 $tab-polygon: polygon(4.5% 5%, 94.5% 5%, 100% 100%, 0% 100%);
